# cos536-practicum

./: .gitattributes  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
payroll/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  employee.cpp  employee.h  hourly.cpp  hourly.h  main.cpp  salaried.cpp  salaried.h
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  employeetest.cpp  hourlytest.cpp  salariedtest.cpp
